--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.css
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .search-container {
@@ -17,6 +18,7 @@
   gap: 1rem;
   align-items: end;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .search-input {
