--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.css
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.css
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .search-container {
@@ -19,10 +20,20 @@
   align-items: end;
   justify-content: center;
   flex-wrap: wrap;
+  animation: heightChange 0.3s ease-in-out;
 }
 
 .search-input {
   @media screen and (min-width: 460px) {
     width: 20rem;
+  }
+}
+
+@keyframes heightChange {
+  from {
+    height: 0;
+  }
+  to {
+    height: 100%;
   }
 }
